# MyPKM

./: .gitignore  CLAUDE.md
.claude/: settings.json
.claude/agents/: derek.md  kael.md  maren.md  nolan.md  pax.md  silas.md  wren.md
.claude/hooks/: check-delegation.sh
.obsidian/: workspace.json
User input/: Tasks M3.md  Tasks M4.md  Thoughts on M2.md  Thoughts.md  User requirements M3.md  User requirements M4.md  Vision.md
data/: dsrp_schema.sql  init_schema.sql
docs/: architecture-review-2026-03-25.md  canvas-framework-evaluation.md  derek-dsrp-review.md  dsrp-data-model-spec.md  dsrp-design-log.md  m0-kickoff.md  m1-derek-review.md  m1-kickoff.md  m2-derek-review.md  m2-kickoff.md  m2-ux-decisions.md  m3-derek-input.md  m3-kickoff-draft.md  m3-kickoff.md  m3-relationships-derek.md  m4-kickoff.md  m4-models-rework-plan.md  m4-schema-assessment.md  roadmap.md  schema.md
poc/app/: server.py  start.bat
poc/app/templates/: index.html
src/: App.tsx  index.html  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: Breadcrumbs.tsx  Canvas.tsx  Card.tsx  LeftSidebar.tsx  RelationshipLine.tsx  RightSidebar.tsx  TopBar.tsx
src/ipc/: db-stub.ts  db-tauri.ts  db.ts  index.ts
src/prototype/custom-react-canvas/: index.html  package.json
src/prototype/custom-react-canvas/src/: App.tsx  Card.tsx  store.ts  types.ts
src/prototype/tldraw-nested/: index.html  package.json
src/store/: canvas-store.ts  types.ts
team/: roster.md
(+1 files in other folders)
