[package]
name = "ambit"
version = "0.1.0"
edition = "2021"

[lib]
name = "ambit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ambit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
